--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "live-server",
     "start:solution": "npm run -it docker:build && npm run docker:run",
     "test": "mocha test",
-    "test:solution": "npm run docker:build && npm run docker:test"
+    "test:solution": "npm run docker:build && npm run docker:test",
+    "build": "[my-framework] build --output public"
+    
   },
   "keywords": [],
   "author": "",
