build script change

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start:solution": "npm run -it docker:build && npm run docker:run",
     "test": "mocha test",
     "test:solution": "npm run docker:build && npm run docker:test",
-    "build": "[my-framework] build --output public"
+    "build": "vercel build --output public"
     
   },
   "keywords": [],
