--- a/package.json
+++ b/package.json
@@ -3,16 +3,7 @@
   "version": "1.0.0",
   "description": "This project allows you to encode and decode text with a variety of different ciphers.",
   "scripts": {
-    "docker:build": "docker image build . -t thinkful-ed/zid-pf-project-decoder-ring-01-qualified",
-    "docker:run": "docker run --rm -it -p 3000:3000 thinkful-ed/zid-pf-project-decoder-ring-01-qualified",
-    "docker:stop": "docker stop $(docker ps -q)",
-    "docker:test": "docker run -t  thinkful-ed/zid-pf-project-decoder-ring-01-qualified npm test",
-    "start": "live-server",
-    "start:solution": "npm run -it docker:build && npm run docker:run",
-    "test": "mocha test",
-    "test:solution": "npm run docker:build && npm run docker:test",
-    "build": "vercel build --output public"
-    
+    "start": "node live-server"
   },
   "keywords": [],
   "author": "",
